src/test/resources/purescript_examples/failing/ImportExplicit2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownImportDataConstructor\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(TypeConstructor)
            PsiElement(proper name)('X')
          PsiElement(()('(')
          PSASTWrapperElement(TypeConstructor)
            PSASTWrapperElement(TypeConstructor)
              PsiElement(proper name)('Z')
          PsiElement(,)(',')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(TypeConstructor)
            PSASTWrapperElement(TypeConstructor)
              PsiElement(proper name)('Q')
          PsiElement())(')')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
